--- a/README
+++ b/README
@@ -7,3 +7,4 @@
 
 notes: ps aux | grep "python" | grep -v "grep"| awk '{print $2}'  | xargs kill -9
 scrapy runspider spider.py
+db.trees.createIndex({domain:1, key:1},{unique:true})
