--- a/README
+++ b/README
@@ -25,11 +25,14 @@ Steps to train a website:
 4. python send_get_req.py evaluation/urls/`domain`_train.txt    # render those URLs in headless browser
    # request will be sent to phantom_manager to execute, wait it to finish
    # screen -r manager # check if there is still task running
+   # ctrl + A; D; to leave screen session
 5. mkdir ./tmp/`domain`; python template.py evaluation/urls/`domain`_train.txt ./tmp/`domain`
 6. read the contents of ./tmp/`domain`/debug
+   An example is at ./tmp/pawprintpets/debug and its analysis is at ./tmp/pawprintpets/analysis
    format: 
      [number: key
        --EXAMPLE-- exmpale]
+	
 
 
 
